<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/question1Title" />

            <TextView
                style="@style/qsAndAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answerHatha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerHatha" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answerAshtanga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerAshtanga" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answerVinyasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerVinyasa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/answerBikram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerBikram" />
            </LinearLayout>


            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2Title" />

            <TextView
                style="@style/qsAndAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioMeditation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerMediation" />

                <RadioButton
                    android:id="@+id/radioUnion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerUnion" />

                <RadioButton
                    android:id="@+id/radioTwist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerTwist" />
            </RadioGroup>

            <TextView
                style="@style/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3Title" />

            <TextView
                style="@style/qsAndAs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/answerInputName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintIyengar"
                android:inputType="text"
                android:maxLength="21" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4Title"
                style="@style/questionTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                style="@style/qsAndAs"/>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answerPranayama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerPranayama"/>
                <RadioButton
                    android:id="@+id/answerAma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerAma"/>
                <RadioButton
                    android:id="@+id/answerSamadhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerSamadhi"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5Title"
                style="@style/questionTitle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                style="@style/qsAndAs"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/answerSatya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerSatya"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/answerAhimsa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerAhimsa"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/answerAsteya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answerAsteya"/>
            </LinearLayout>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>